kyverno-policies/requests-and-limits.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: requests-and-limits
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods

  validations:
    - message: "Container must have resource requests and limits defined"
      expression: "object.spec.containers.all(c, has(c.resources) && has(c.resources.requests) && has(c.resources.limits))"
