kyverno-policies/runas-nonroot.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: run-as-non-root
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: ['']
        apiVersions: [v1]
        operations: [CREATE, UPDATE]
        resources: [pods]
  validations:
    - message: container must run as non-root user
      expression: "object.spec.?securityContext.?runAsNonRoot.orValue(false) == true"
